# streaming-osm

./: .gitignore  .travis.yml  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  README.org  notes.org  package.yaml  pbf-notes.org  stack-710.yaml  stack.yaml  streaming-osm.cabal
.github/workflows/: ci.yaml
bench/: Bench.hs
lib/Streaming/: Osm.hs
lib/Streaming/Osm/: Types.hs
lib/Streaming/Osm/Internal/: Parser.hs  Util.hs
src/Streaming/: Osm.hs
src/Streaming/Osm/: Parser.hs  Types.hs  Util.hs
src/Streaming/Osm/Internal/: Parser.hs  Util.hs
test/: Test.hs  ajishima.osm.pbf  diomede.osm.pbf  north-van.osm.pbf  nozakijima.osm.pbf  shrine.osm.pbf  tashirojima.osm.pbf  uku.osm.pbf
