name:                streaming-osm
version:             1.0.0
synopsis:            A hand-written streaming byte parser for OpenStreetMap Protobuf data.
description:         A hand-written streaming byte parser for OpenStreetMap Protobuf data.
license:             BSD3
license-file:        LICENSE
author:              Colin Woodbury
maintainer:          colingw@gmail.com
-- copyright:
category:            Streaming
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Streaming.Osm
                     , Streaming.Osm.Parser
                     , Streaming.Osm.Types
                     , Streaming.Osm.Util

  build-depends:       base >=4.9 && <4.10
                     , attoparsec >= 0.13 && < 0.14
                     , bytestring
                     , containers
                     , streaming >= 0.1 && < 0.2
                     , streaming-bytestring >= 0.1 && < 0.2
                     , text
                     , zlib >= 0.6 && < 0.7

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds

test-suite streaming-osm-test
  type:                exitcode-stdio-1.0

  build-depends:       base >= 4.9 && < 4.10
                     , bytestring
                     , streaming-osm
                     , tasty >= 0.11 && < 0.12
                     , tasty-hunit >= 0.9 && < 0.10

  hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -threaded
